--- a/website/templates/chats/thanks.html
+++ b/website/templates/chats/thanks.html
@@ -118,6 +118,7 @@
       <div class="msg-text">
         <p>That was all thank you!</p>
             <p><div style="width:100%;height:0;padding-bottom:66%;position:relative;"><iframe src="https://giphy.com/embed/s2qXK8wAvkHTO" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/party-birthday-celebration-s2qXK8wAvkHTO"></a></p></p> 😄
+            <p>If you like feedback like this, check out Grapevine</p>
       </div>
     </div>
   </div>
