--- a/website/templates/chats/chatquestion1.html
+++ b/website/templates/chats/chatquestion1.html
@@ -44,19 +44,13 @@
 
 <!-- Piece of Javascript that ensures we'll always scroll to the bottom of the page-->
     <script>
-      function scrollToBottom() {
-          window.scrollTo(0, document.section.scrollHeight);
-      }
-      history.scrollRestoration = "manual";
-      window.onload = scrollToBottom;
+      const element = document.getElementById("chat1");
+      element.scrollIntoView();
   </script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-<script>
 
-$("#chat").animate({ scrollTop: $('#chat').prop("scrollHeight")}, 1000);
-
-  </script>
 
   </head>
 <body>
@@ -113,6 +107,7 @@ $("#chat").animate({ scrollTop: $('#chat').prop("scrollHeight")}, 1000);
 </form>
 </section> 
 {% endblock%}
+
 
 </body>
 </html>
