--- a/website/templates/chats/chatquestion2.html
+++ b/website/templates/chats/chatquestion2.html
@@ -31,7 +31,7 @@
 
     <div class="msg-bubble">
       <div class="msg-info">
-        <div class="msg-info-name">{{username}}</div>
+        <div class="msg-info-name">{{publicname}}</div>
         <div class="msg-info-time">12:45</div>
       </div>
 
