--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -13,7 +13,7 @@
               <form method="POST" class="row g-3">
                 <div class="col-md-12">
                   <label for="username">Username</label>
-                  <p class="card-text"><small class="text-muted">The username will be shown to your customers, so pick something they will recognize</small></p>
+                  <p class="card-text"><small class="text-muted">Choose a username for your account, you can later pick a name that we'll show your customers.</small></p>
                   <input
                     type="text"
                     id="username"
@@ -37,7 +37,7 @@
 
                 <div class="col-md-6">
                   <label for="phonenumber">Phone Number</label>
-                  <p class="card-text"><small class="text-muted">So we can text you</small></p>
+                  <p class="card-text"><small class="text-muted">So we can text you your templates</small></p>
                   <input
                     type="text"
                     id="phonenumber"
