Fixing templating for messaging

--- a/website/templates/legal/terms.html
+++ b/website/templates/legal/terms.html
@@ -3,6 +3,12 @@
 
 
 {% block Content%}
+<h1>This is our legal section consisting of:</h1>
+         <ul id="menu">
+            <a href="/legal/pricing"><li>Pricing</li></a>
+            <a href="/legal/terms"><li>Terms and Conditions</li></a>
+            <a href="/legal/privacy"><li>Privacy</li></a>
+        </ul>            
 <br><br>
     
 
