removed like button

--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -709,7 +709,7 @@
 
                     <hr>
                     <h6>Customize your chat:</h6>
-                    <p>By customizing these settings, you can change how customers interact with you. You can set the name customers see, and  add custom questions that allow you to ask your customers specific things. You can add up to 3 custom questions. </p>
+                    <p>By customizing these settings, you can change how customers interact with you. You can set the name customers see, and  add custom questions that allow you to ask your customers specific things You can add up to 3 custom questions. </p>
 
                     <div class="mb-3">
                       <label for="userpublicname" class="form-label">The name your users see in the chat and email templates</label>
