implemented password reset token system - no email

--- a/website/templates/forgotpassword.html
+++ b/website/templates/forgotpassword.html
@@ -24,7 +24,7 @@
               />
               </div>
               <div align="center">
-                <button class="btn btn-primary" type="submit">Login</button>
+                <button class="btn btn-primary text-dark" type="submit">Reset password</button>
               </div>
           </form> 
         </div> 
