--- a/website/templates/signin.html
+++ b/website/templates/signin.html
@@ -30,7 +30,7 @@
                 class="form-control"
                 placeholder="Enter your Password"
               /><div id="passwordHelpBlock" class="form-text">
-                If you have forgotten your password email us at: grapevine@petervandoorn.com. We're still developping the password reset functionality
+                If you have forgotten your password <a class="text-dark" href="/forgot-password">click here to reset</a> your password
               </div>
               <br />
               <div align="center">
