replaced all grapevine.works URL to franklyapp.nl

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -8,7 +8,7 @@
          <meta name="author" content="Grapevine " />
          <!-- HTML Meta Tags -->
        <!-- Facebook Meta Tags -->
-       <meta property="og:url" content="https://grapevine.works">
+       <meta property="og:url" content="https://franklyapp.nl">
        <meta property="og:type" content="website">
        <meta property="og:title" content="Grapevine helps you collect feedback easily through QR Codes">
        <meta property="og:description" content="Grapevine helps you collect feedback easily through QR Codes">
@@ -16,8 +16,8 @@
  
        <!-- Twitter Meta Tags -->
        <meta name="twitter:card" content="summary_large_image">
-       <meta property="twitter:domain" content="https://grapevine.works">
-       <meta property="twitter:url" content="https://grapevine.works">
+       <meta property="twitter:domain" content="https://franklyapp.nl">
+       <meta property="twitter:url" content="https://franklyapp.nl">
        <meta name="twitter:title" content="Grapevine helps you collect feedback easily through QR Codes">
        <meta name="twitter:description" content="Grapevine helps you collect feedback easily through QR Codes">
        <meta name="twitter:image" content="{{ url_for('static',filename='assets/img/social.png') }}">
