--- a/website/templates/legal/privacy.html
+++ b/website/templates/legal/privacy.html
@@ -12,7 +12,7 @@
 <br><br>
 <h1>Privacy Policy for Grapevine</h1>
 
-<p>At Grapevine, accessible from https://grapevine.works, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Grapevine and how we use it.</p>
+<p>At Grapevine, accessible from https://franklyapp.nl, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Grapevine and how we use it.</p>
 
 <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
 
