--- a/website/templates/legal/terms.html
+++ b/website/templates/legal/terms.html
@@ -16,7 +16,7 @@
 
         <p>Welcome to Grapevine!</p>
         
-        <p>These terms and conditions outline the rules and regulations for the use of Grapevine's Website, located at https://grapevine.works.</p>
+        <p>These terms and conditions outline the rules and regulations for the use of Grapevine's Website, located at https://franklyapp.nl.</p>
         
         <p>By accessing this website we assume you accept these terms and conditions. Do not continue to use Grapevine if you do not agree to take all of the terms and conditions stated on this page.</p>
         
