--- a/website/templates/emailtemplates/feedbacktemplate.html
+++ b/website/templates/emailtemplates/feedbacktemplate.html
@@ -359,7 +359,7 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                   <tbody>
                                     <tr>
-                                      <td> <a href="https://grapevine.works/sign-in" target="_blank">Sign into your account</a> </td>
+                                      <td> <a href="https://franklyapp.nl/sign-in" target="_blank">Sign into your account</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
@@ -385,7 +385,7 @@
               <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 <tr>
                   <td class="content-block">
-                    <span class="apple-link">Grapevine - hello@grapevine.works</span>
+                    <span class="apple-link">Grapevine - hello@franklyapp.nl</span>
                     <br> Collect feedback from your users <a href="http://i.imgur.com/CScmqnj.gif">Unsubscribe</a>.
                   </td>
                 </tr>
